<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="Processing"
        android:key="pref_cat_processing">

        <ListPreference
            android:defaultValue="tag36h11"
            android:entries="@array/pref_tag_family_list_titles"
            android:entryValues="@array/pref_tag_family_list_values"
            android:key="tag_family_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_tag_family" />

        <ListPreference
            android:defaultValue="8"
            android:entries="@array/pref_decimation_list_titles"
            android:entryValues="@array/pref_decimation_list_values"
            android:key="decimation_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_decimation"/>

        <ListPreference
            android:defaultValue="largest"
            android:key="preview_resolution"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="Camera Preview Resolution"
            android:summary="Select target preview resolution for AprilTag detection" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_sigma"
            android:inputType="numberDecimal"
            android:key="sigma_value"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_sigma" />

        <EditTextPreference
            android:key="max_hamming_error"
            android:title="Max Hamming Error"
            android:summary="Maximum Hamming distance allowed for tag detection"
            android:dialogTitle="Max Hamming Error"
            android:defaultValue="0"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"/>

        <EditTextPreference
            android:defaultValue="@string/pref_default_nthreads"
            android:inputType="number"
            android:key="nthreads_value"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_nthreads"/>

        <EditTextPreference
            android:defaultValue="@string/pref_default_apriltag_size"
            android:inputType="numberDecimal"
            android:key="apriltag_size"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_apriltag_size"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="FRC Options"
        android:key="pref_cat_frc">

        <SwitchPreference
            android:key="frc_mode"
            android:title="Enable FRC Mode"
            android:summary="Lock tag size to 6.5 inches (0.1651m) and compute robot pose on FRC field"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Camera Calibration"
        android:key="pref_cat_calibration">

        <SwitchPreference
            android:key="calibration_override"
            android:title="@string/pref_title_calibration_override"
            android:summary="@string/pref_summary_calibration_override"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="calibration_fx"
            android:title="@string/pref_title_calibration_fx"
            android:defaultValue="@string/pref_default_calibration_fx"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:dependency="calibration_override" />

        <EditTextPreference
            android:key="calibration_fy"
            android:title="@string/pref_title_calibration_fy"
            android:defaultValue="@string/pref_default_calibration_fy"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:dependency="calibration_override" />

        <EditTextPreference
            android:key="calibration_cx"
            android:title="@string/pref_title_calibration_cx"
            android:defaultValue="@string/pref_default_calibration_cx"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:dependency="calibration_override" />

        <EditTextPreference
            android:key="calibration_cy"
            android:title="@string/pref_title_calibration_cy"
            android:defaultValue="@string/pref_default_calibration_cy"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:dependency="calibration_override" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Diagnostics"
        android:key="pref_cat_diagnostics">

        <SwitchPreference
            android:key="diagnostics_enabled"
            android:title="Enable Diagnostics"
            android:summary="Enable additional stats and diagnostics."
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
